--- a/LeverageTechnology/Client/Pages/Index.razor
+++ b/LeverageTechnology/Client/Pages/Index.razor
@@ -6,7 +6,7 @@
     <MudTabPanel Text="@title">
         <MudGrid Elevation="1" Class="py-8 px-10">
             <MudItem Class="mt-1" xs="12" Style="height: fit-content;">
-                <MudText Typo="Typo.h4">@introduction</MudText> 
+                <MudText Typo="Typo.h4" Color="Color.Primary">@introduction</MudText>
             </MudItem>
             <MudItem Class="mt-1" xs="12" Style="height: fit-content;"> 
                 <MudContainer Class="mt-1 row">
