--- a/LeverageTechnology/Client/Pages/LoginVC.razor
+++ b/LeverageTechnology/Client/Pages/LoginVC.razor
@@ -6,9 +6,14 @@
 @inject NavigationManager NavManager
 @inject ApiService ApiService
 
+
+  @*background: rgb(2,0,36); background: linear-gradient(199deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 20%, rgba(0,212,255,1) 100%);*@
+
 <MudContainer Class="d-flex justify-center align-content-center " MaxWidth="MaxWidth.ExtraExtraLarge" Style="height:100vh;min-width:100vw;
-                                                        background: rgb(2,0,36);
-                                                        background: linear-gradient(199deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 20%, rgba(0,212,255,1) 100%);">
+                                                        background-image:url('images/bg.gif');
+                                                        background-repeat:no-repeat;
+                                                        background-size:cover;background-position:center">
+
     <MudPaper Class="d-flex align-self-center" Height="50%" Width="50%" Elevation="3">
         <MudGrid Justify="Justify.Center" Style="height:60%;vertical-align:central">
 
