--- a/LeverageTechnology/Client/Shared/NavMenu.razor
+++ b/LeverageTechnology/Client/Shared/NavMenu.razor
@@ -22,9 +22,9 @@
         {
             <MudNavGroup Icon="@Icons.Material.Filled.Settings" Title="Configurations" Expanded="true">
                 <MudNavLink Icon="@Icons.Material.Filled.AdminPanelSettings" Href="/UA">User Management</MudNavLink>
+                <MudNavLink Icon="@Icons.Material.Filled.TableChart" Href="/ET">DashboardPage</MudNavLink>
+                <MudNavLink Icon="@Icons.Material.Filled.ViewHeadline" Href="/IN">SideNav</MudNavLink>
                 <MudNavLink Icon="@Icons.Material.Filled.Cases" Href="/CS">CaseStudies</MudNavLink>
-                <MudNavLink Icon="@Icons.Material.Filled.TableChart" Href="/ET">ExpTables</MudNavLink>
-                <MudNavLink Icon="@Icons.Material.Filled.ViewHeadline" Href="/IN">Intros</MudNavLink>
             </MudNavGroup>
         }
     }
